--- a/public_html/index.html
+++ b/public_html/index.html
@@ -342,7 +342,7 @@
         </div>
     </div>
     <div class="bg-dark text-light text-center border-top wow fadeIn">
-        <p class="mb-0 py-3 text-muted small">&copy; Copyright <script>document.write(new Date().getFullYear())</script> Made with <i class="ti-heart text-danger"></i> By <a href="http://devcrud.com">Motaung inc</a></p>
+        <p class="mb-0 py-3 text-muted small">&copy; Copyright <script>document.write(new Date().getFullYear())</script> Made with <i class="ti-heart text-danger"></i> By <a href="https://motaunginc.vercel.app">Motaung inc</a></p>
     </div>
     <!-- end of page footer -->
 
